# workload-SMT

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py  solver.py
