[project]
name = "workload-smt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "z3-solver>=4.16.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
workflow-solver = "src.main:main"
